# BattleRoyale

./: .gitignore  AGENTS.md  ALGORITHM_ANALYSIS.md  ASYNC_UPLOAD_FIX.md  CLAUDE.md  CMakeLists.txt  ISSUE2_FIX_SUMMARY.md  NVIDIA_COMPATIBILITY_FIX.md  PERFORMANCE_BASELINE.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PHASE1_COMPLETE.md  WEEK2_IMPLEMENTATION_SUMMARY.md  WEEK3_IMPLEMENTATION_SUMMARY.md  WEEK4_IMPLEMENTATION_SUMMARY.md  WEEK4_QUICK_START.md  config.sh  image_loading_analysis.md  image_plan.md  image_render_analysis.md  image_render_issues.md  plan.md  plan2.md  run.bat  run.sh  simulation_config.txt  simulation_config_backup_1758614384.txt  size_factors.txt  vcpkg.json
.claude/: settings.local.json
.cursor/rules/: projectrule.mdc
shaders/: circle.frag  circle.vert  circle_cull.comp  circle_optimized.frag  circle_tier0.frag  circle_tier0.vert  circle_tier1.frag  circle_tier1.vert  frustum_cull.comp  health_bar.frag  health_bar.vert  hiz_build.comp  procedural_texture.comp  text.frag  text.vert  texture_stream.comp
src/: bindless_textures.hpp  config_main.cpp  damage_curve.cpp  damage_curve.hpp  font_loader.cpp  font_loader.hpp  gpu_driven_rendering.hpp  main.cpp  simd_verification.cpp  simd_verification.hpp  spatial_benchmark.cpp  spatial_benchmark.hpp  spatial_system.cpp  spatial_system.hpp  stb_easy_font.h  texture_compression.hpp  virtual_texturing.hpp
